# VirusSpread

./: LICENSE  README.md  pyproject.toml
virspread/: person.py
viruspread/: person.py
