[tool.poetry]
name = "virusspread"
version = "0.1.0"
description = "studying the spread of viruses in human populations"
authors = ["Iván Ortiz Martín <ivan@transgruasortiz.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
